tests/snapshots/tui_stories__cpu_show_normal.snap
---
source: tests/tui_stories.rs
assertion_line: 28
expression: output
---
╭ ¹cpu  42.0% @ 3400MHz  8.5W  55°C ───────────────────────────────────────────╮
│            ⣴⣿⣦                                                         c m p │
│           ⣼⣿⣿⣿⣧                                                              │
│          ⢰⣿⣿⣿⣿⣿⡆                                                             │
│          ⣾⣿⣿⣿⣿⣿⣷                                                             │
│         ⢰⣿⣿⣿⣿⣿⣿⣿⡆                                                            │
│         ⣾⣿⣿⣿⣿⣿⣿⣿⣷                                                            │
│        ⢀⣿⣿⣿⣿⣿⣿⣿⣿⣿⡀                                                           │
│        ⢸⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇                                                           │
│        ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿                                                           │
│       ⢠⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡄                                                          │
│       ⢸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇                                                          │
│       ⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣷                                                          │
│       ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿                                                          │
│      ⢸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇                                                         │
│      ⣸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣇                                                         │
│      ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿                                                         │
│     ⢀⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡀                                                        │
│     ⢸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇                                                        │
│     ⣸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣇                                                        │
│     ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿                                                        │
│     ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿                                                        │
│    ⢸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇                                                       │
│    ⢸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇                                                       │
│    ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿                                                       │
│    ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿                                                       │
│   ⢰⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡆                                                      │
│   ⢸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇                                                      │
│   ⣼⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣧                                                      │
│   ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿                                                      │
│   ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿                                                      │
│  ⢸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇                                                     │
│  ⢸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇                                                     │
│  ⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣷                                                     │
│  ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿                                                     │
│ ⢀⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡀                                                    │
│ ⢸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇                                                    │
│ ⢸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇                                                    │
│  E: 24% @ 1200MHz  P: 67% @ 3400MHz                                          │
╰──────────────────────────────────────────────────────────────────────────────╯
