tests/snapshots/tui_stories__gpu_active.snap
---
source: tests/tui_stories.rs
assertion_line: 34
expression: output
---
╭ ²gpu 73.0% @ 1400MHz  12.5W  68°C ───────────────────────────────────────────╮
│            ⣴⣿⣦                                                               │
│           ⣼⣿⣿⣿⣧                                                              │
│          ⢰⣿⣿⣿⣿⣿⡆                                                             │
│          ⣾⣿⣿⣿⣿⣿⣷                                                             │
│         ⢰⣿⣿⣿⣿⣿⣿⣿⡆                                                            │
│         ⣾⣿⣿⣿⣿⣿⣿⣿⣷                                                            │
│        ⢀⣿⣿⣿⣿⣿⣿⣿⣿⣿⡀                                                           │
│        ⢸⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇                                                           │
│        ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿                                                           │
│       ⢠⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡄                                                          │
│       ⢸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇                                                          │
│       ⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣷                                                          │
│       ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿                                                          │
│      ⢸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇                                                         │
│      ⣸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣇                                                         │
│      ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿                                                         │
│     ⢀⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡀                                    ANE  1.2W           │
│     ⢸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇                                    DRAM 2.3W           │
│     ⣸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣇                                                        │
│     ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿                                    VRAM 0.0/0GB        │
│     ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿                                                        │
│    ⢸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇                                                       │
│    ⢸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇                                                       │
│    ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿                                                       │
│    ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿                                                       │
│   ⢰⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡆                                                      │
│   ⢸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇                                                      │
│   ⣼⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣧                                                      │
│   ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿                                                      │
│   ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿                                                      │
│  ⢸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇                                                     │
│  ⢸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇                                                     │
│  ⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣷                                                     │
│  ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿                                                     │
│ ⢀⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡀                                                    │
│ ⢸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇                                                    │
│ ⣸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣇                                                    │
│  18 cores                                               ANE 1.2W  DRAM 2.3W  │
╰──────────────────────────────────────────────────────────────────────────────╯
