tests/snapshots/tui_stories__mem_near_full.snap
---
source: tests/tui_stories.rs
expression: output
---
╭ ³mem  17.0/18GB 94% ● ───────────── swap: 2.0/4.0GB in:512.0K/s out:256.0K/s ╮
│ ╭ used 17.0GB ─────────────╮  ╭ avail 1.0GB ──────────╮                      │
│ │                          │  │                      ⢸│                      │
│ │            ⣀             │  │                      ⢸│                      │
│ │          ⢀⣾⣿⣷⡀           │  │                      ⣾│                      │
│ │          ⣾⣿⣿⣿⣷           │  │                      ⣿│                      │
│ │         ⣸⣿⣿⣿⣿⣿⣇          │  │                     ⢰⣿│                      │
│ │        ⢀⣿⣿⣿⣿⣿⣿⣿⡀         │  │                     ⢸⣿│                      │
│ │        ⣸⣿⣿⣿⣿⣿⣿⣿⣇         │  │                     ⣼⣿│                      │
│ │        ⣿⣿⣿⣿⣿⣿⣿⣿⣿         │  │                     ⣿⣿│                      │
│ │       ⢸⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇        │  │⡀                   ⢀⣿⣿│                      │
│ │       ⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣷        │  │⡇                   ⢸⣿⣿│                      │
│ │      ⢀⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡀       │  │⣇                   ⣸⣿⣿│                      │
│ │      ⢸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇       │  │⣿                   ⣿⣿⣿│                      │
│ │      ⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣷       │  │⣿⡀                 ⢀⣿⣿⣿│                      │
│ │     ⢀⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡀      │  │⣿⡇                 ⢸⣿⣿⣿│                      │
│ │     ⢸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇      │  │⣿⣇                 ⣸⣿⣿⣿│                      │
│ │     ⣼⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣧      │  │⣿⣿                 ⣿⣿⣿⣿│  disk                │
│ │     ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿      │  │⣿⣿⡀               ⢀⣿⣿⣿⣿│  ■■■■■■■■■■■■■■  74% │
│ │    ⢰⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡆     │  │⣿⣿⡇               ⢸⣿⣿⣿⣿│  380/512 GB          │
│ │    ⢸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇     │  │⣿⣿⣇               ⣸⣿⣿⣿⣿│                      │
│ │    ⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣷     │  │⣿⣿⣿               ⣿⣿⣿⣿⣿│  read  76.3 MB/s     │
│ │    ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿     │  │⣿⣿⣿⡄             ⢠⣿⣿⣿⣿⣿│  write 33.4 MB/s     │
│ │   ⢰⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡆    │  │⣿⣿⣿⡇             ⢸⣿⣿⣿⣿⣿│                      │
│ │   ⢸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇    │  │⣿⣿⣿⣷             ⣾⣿⣿⣿⣿⣿│                      │
│ │   ⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣷    │  │⣿⣿⣿⣿⡀           ⢀⣿⣿⣿⣿⣿⣿│                      │
│ │   ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿    │  │⣿⣿⣿⣿⡇           ⢸⣿⣿⣿⣿⣿⣿│                      │
│ │  ⢰⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡆   │  │⣿⣿⣿⣿⣷           ⣾⣿⣿⣿⣿⣿⣿│                      │
│ │  ⢸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇   │  │⣿⣿⣿⣿⣿⡀         ⢀⣿⣿⣿⣿⣿⣿⣿│                      │
│ │  ⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣷   │  │⣿⣿⣿⣿⣿⡇         ⢸⣿⣿⣿⣿⣿⣿⣿│                      │
│ │  ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿   │  │⣿⣿⣿⣿⣿⣿         ⣿⣿⣿⣿⣿⣿⣿⣿│                      │
│ │ ⢠⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡄  │  │⣿⣿⣿⣿⣿⣿⡆       ⢰⣿⣿⣿⣿⣿⣿⣿⣿│                      │
│ │ ⢸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇  │  │⣿⣿⣿⣿⣿⣿⣷       ⣾⣿⣿⣿⣿⣿⣿⣿⣿│                      │
│ │ ⣸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣇  │  │⣿⣿⣿⣿⣿⣿⣿⡆     ⢰⣿⣿⣿⣿⣿⣿⣿⣿⣿│                      │
│ │ ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿  │  │⣿⣿⣿⣿⣿⣿⣿⣿⡀   ⢀⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿│                      │
│ │⢀⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡀ │  │⣿⣿⣿⣿⣿⣿⣿⣿⣷⡀ ⢀⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿│                      │
│ │⢸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇ │  │⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣶⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿│                      │
│ │⢸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇ │  │⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿│                      │
│ ╰──────────────────────────╯  ╰───────────────────────╯                      │
╰──────────────────────────────────────────────────────────────────────────────╯
