tests/snapshots/tui_stories__network_active.snap
---
source: tests/tui_stories.rs
assertion_line: 46
expression: output
---
╭ ⁴net  ───────────────────────────────────────────────────────────100%=10MB/s ╮
│                                                                              │
│           ⢠⣴⣶⣦⡄                                                              │
│          ⣰⣿⣿⣿⣿⣿⣆                                                             │
│         ⣸⣿⣿⣿⣿⣿⣿⣿⣇                                                            │
│        ⣰⣿⣿⣿⣿⣿⣿⣿⣿⣿⣆                                                           │
│       ⢠⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡄                                                          │
│       ⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣷                                                          │
│      ⢸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇                                                         │
│     ⢀⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡀                                                        │
│     ⣸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣇                                                        │
│    ⢀⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡀                                                       │
│    ⣸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣇                                   ▼ download          │
│   ⢀⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡀                                  9.3M/s              │
│   ⣸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣇                                  max: 9.3M/s         │
│  ⢀⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡀                                 total: 3.17 GB      │
│  ⣸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣇                                                     │
│  ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿                                 ▲ upload            │
│ ⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣷                                539.1K/s            │
│ ⠿⠿⠿⠿⠿⠿⠿⠿⢿⣿⣿⣿⣿⣿⣿⣿⡿⠿⠿⠿⠿⠿⠿⠿⠿                                max: 538.8K/s       │
│                                                          total: 1.02 GB      │
│                                                                              │
│                                                          ■ active            │
│                                                          en0 (ethernet)      │
│                                                          en1 (wifi)          │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯
