tests/snapshots/tui_stories__process_populated.snap
---
source: tests/tui_stories.rs
assertion_line: 59
expression: output
---
╭ ⁶proc ───────────────────────────────────────────────────────────────────────╮
│ pid    name                                        cpu    mem    pow thread  │
│ 2890   cargo                                    • 88.5 • 401M •  9.8     16  │
│ 1      kernel_task                              •  5.2 • 1.9G •  0.0    512  │
│ 1204   Xcode                                    • 45.3 • 1.7G •  6.2     64  │
│ 312    WindowServer                             • 12.4 • 488M •  1.8     18  │
│ 512    mds_stores                               • 15.2 • 172M •  1.1      8  │
│ 891    Safari                                   •  8.7 • 334M •  0.9     32  │
│ 2341   mtop                                     •  3.1 •   8M •  0.2      4  │
│ 445    Finder                                   •  0.8 •  91M •  0.1      8  │
│ 678    Terminal                                 •  1.4 •  43M •  0.1      6  │
│ 334    coreaudiod                               •  0.3 •  21M •  0.0      4  │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                sort: Score ↓ │
╰──────────────────────────────────────────────────────────────────────────────╯
